<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/subview_create_back" />
    <View android:background="@color/dark_grey" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:background="@drawable/style_border_disable_click" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:src="@drawable/wif" />
        <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/black_text_gray" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:text="@string/lbl_wifi" />
    </LinearLayout>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/style_border_disable_click" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_12sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_12sdp">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/_10sdp" android:text="*" android:layout_alignParentRight="true" />
                <AutoCompleteTextView android:id="@id/et_ssid_wifi" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:layout_marginBottom="@dimen/_10sdp" android:hint="@string/lbl_ssid" android:maxLines="1" android:singleLine="true" android:imeOptions="actionNext" android:nextFocusForward="@id/et_password_wifi" />
            </RelativeLayout>
            <AutoCompleteTextView android:id="@id/et_password_wifi" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp" android:hint="@string/lbl_password" android:maxLines="1" android:singleLine="true" android:imeOptions="actionDone" />
            <LinearLayout android:orientation="horizontal" android:background="@drawable/style_border_tab_bar" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_margin="@dimen/_10sdp" android:weightSum="3.0">
                <TextView android:textSize="@dimen/_8sdp" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/tv_wifi_first" android:background="@drawable/style_border_text_left" android:padding="@dimen/_10sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wpa_wpa2" android:maxLines="1" android:layout_weight="1.0" />
                <View android:background="@color/blue_back_menu" android:layout_width="2.0px" android:layout_height="fill_parent" />
                <TextView android:textSize="@dimen/_8sdp" android:textColor="@color/blue_back_menu" android:gravity="center" android:id="@id/tv_wifi_second" android:padding="@dimen/_10sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wep" android:layout_weight="1.0" />
                <View android:background="@color/blue_back_menu" android:layout_width="2.0px" android:layout_height="fill_parent" />
                <TextView android:textSize="@dimen/_8sdp" android:textColor="@color/blue_back_menu" android:gravity="center" android:id="@id/tv_wifi_third" android:background="@color/transparent" android:padding="@dimen/_10sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/lbl_none" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>