<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/subview_create_back" />
    <View android:background="@color/dark_grey" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/style_border_disable_click" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:src="@drawable/eve" />
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/black_text_gray" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:text="@string/lbl_event" />
        </LinearLayout>
        <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:background="@drawable/style_border_disable_click" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp">
                <AutoCompleteTextView android:textSize="@dimen/_14sdp" android:id="@id/et_title_event" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:hint="@string/lbl_title" android:inputType="textCapSentences" android:imeOptions="actionNext" />
                <AutoCompleteTextView android:textSize="@dimen/_14sdp" android:id="@id/et_location_event" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:hint="@string/lbl_location" android:inputType="textCapSentences" android:imeOptions="actionNext" />
                <AutoCompleteTextView android:id="@id/et_url_event" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:hint="http://" android:inputType="textWebEditText" />
                <AutoCompleteTextView android:textSize="@dimen/_14sdp" android:id="@id/et_description_event" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:hint="@string/lbl_description" android:inputType="textCapSentences" android:imeOptions="actionDone" />
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/black" android:id="@id/tv_begin_time" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:hint="@string/lbl_begin_time" />
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/black" android:id="@id/tv_end_time" android:background="@drawable/style_border_edittext" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_10sdp" android:layout_marginBottom="@dimen/_12sdp" android:hint="@string/lbl_end_time" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>