<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/header" android:background="@color/header_bg" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/fis" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/tv_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/dialog_rate_title3" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header" android:layout_alignParentLeft="true">
        <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:gravity="left" android:id="@id/tv_vote" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/common_give_5_start_prompt3" />
        <RatingBar android:id="@id/rating_5_stars" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="14.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/btn_cancel" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/dialog_rate_dislike3" android:layout_weight="1.0" android:layout_toLeftOf="@id/btn_later" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/btn_later" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/dialog_rate_nothanks3" android:layout_weight="1.0" android:layout_toLeftOf="@id/btn_rate" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/btn_rate" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/dialog_rate_title3" android:layout_weight="1.0" android:layout_alignParentRight="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>