<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/view_group_favorite" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/view_group_top" android:background="@color/transfer" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
            <TextView android:textSize="@dimen/_16sdp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_favorites" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_ads_favorites" android:background="@drawable/style_highlight_button" android:paddingLeft="19.0dip" android:paddingTop="16.0dip" android:paddingRight="13.0dip" android:paddingBottom="16.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/gi" android:layout_toLeftOf="@id/iv_sort_list_favorite" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_sort_list_favorite" android:background="@drawable/style_highlight_button" android:paddingLeft="13.0dip" android:paddingTop="16.0dip" android:paddingRight="19.0dip" android:paddingBottom="16.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/sort" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/layout_search" android:background="@drawable/rounded_corner_bg_transfer_20" android:padding="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginRight="@dimen/_20sdp">
                <ImageView android:id="@id/img_close_search" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/se" />
                <FrameLayout android:paddingLeft="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <EditText android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/edt_search" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/search_hint" android:maxLines="1" />
                </FrameLayout>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView android:id="@id/rv_list_favorite" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_20sdp" android:layout_marginBottom="@dimen/_10sdp" android:layout_below="@id/layout_search" />
            <RelativeLayout android:layout_gravity="center" android:id="@id/rl_empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_centerInParent="true">
                <TextView android:textSize="@dimen/_18sdp" android:gravity="center" android:id="@id/tv_no_qr_code" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_no_qrcode" android:layout_centerHorizontal="true" />
                <FrameLayout android:id="@id/fr_container_ads" android:background="@drawable/style_border_ads" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_below="@id/tv_no_qr_code" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <FrameLayout android:id="@id/fr_qr_details_favorite" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</FrameLayout>